--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         #item-list {
             width: 50%;
-            border: 2px solid red; /* Borda vermelha */
+            border: 2px solid red;
             padding: 10px;
             border-radius: 5px;
         }
@@ -36,11 +36,11 @@
             width: 30%;
             max-height: 400px;
             overflow-y: auto;
-            border: 2px solid red; /* Borda vermelha */
+            border: 2px solid red;
             padding: 10px;
             border-radius: 5px;
             background-color: white;
-            margin-left: auto; /* Move para a direita */
+            margin-left: auto;
         }
         .notification {
             background-color: #ffcccb;
@@ -50,21 +50,21 @@
         }
         .item {
             display: flex;
-            align-items: center; /* Alinha os itens no centro */
+            align-items: center;
             margin: 5px 0;
         }
         .item input[type="text"] {
-            width: calc(100% - 60px); /* Ajusta a largura */
+            width: calc(100% - 60px);
         }
         .item input[type="number"] {
             width: 50px;
-            margin-left: 10px; /* Margem para separar do nome do produto */
+            margin-left: 10px;
         }
         #config-button {
             position: fixed;
             right: 20px;
             bottom: 20px;
-            padding: 5px 10px; /* Botão pequeno */
+            padding: 5px 10px;
             background-color: darkblue;
             color: white;
             border: none;
@@ -72,7 +72,7 @@
             cursor: pointer;
         }
         #config-panel {
-            display: none; /* Escondido por padrão */
+            display: none;
             position: fixed;
             right: 20px;
             bottom: 70px;
@@ -99,10 +99,36 @@
     <h1>Decafil</h1>
     <div id="item-list">
         <div id="item-list-title">Lista de itens</div>
-        <!-- Adicionando 30 produtos -->
+        <!-- Adicionando produtos de 1 a 30 -->
         <div class="item"><input type="text" value="Produto 1" onchange="updateNotifications()"><input type="number" value="5" min="0" onchange="updateNotifications()"></div>
         <div class="item"><input type="text" value="Produto 2" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
-        <!-- Continue até Produto 30 -->
+        <div class="item"><input type="text" value="Produto 3" onchange="updateNotifications()"><input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 4" onchange="updateNotifications()"><input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 5" onchange="updateNotifications()"><input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 6" onchange="updateNotifications()"><input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 7" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 8" onchange="updateNotifications()"><input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 9" onchange="updateNotifications()"><input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 10" onchange="updateNotifications()"><input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 11" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 12" onchange="updateNotifications()"><input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 13" onchange="updateNotifications()"><input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 14" onchange="updateNotifications()"><input type="number" value="6" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 15" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 16" onchange="updateNotifications()"><input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 17" onchange="updateNotifications()"><input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 18" onchange="updateNotifications()"><input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 19" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 20" onchange="updateNotifications()"><input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 21" onchange="updateNotifications()"><input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 22" onchange="updateNotifications()"><input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 23" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 24" onchange="updateNotifications()"><input type="number" value="6" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 25" onchange="updateNotifications()"><input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 26" onchange="updateNotifications()"><input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 27" onchange="updateNotifications()"><input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 28" onchange="updateNotifications()"><input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 29" onchange="updateNotifications()"><input type="number" value="2" min="0" onchange="updateNotifications()"></div>
         <div class="item"><input type="text" value="Produto 30" onchange="updateNotifications()"><input type="number" value="6" min="0" onchange="updateNotifications()"></div>
     </div>
     <div id="notifications">
@@ -114,7 +140,33 @@
         <!-- Adicionando configurações para 30 produtos -->
         <div class="config-item"><label for="min-quantity-produto-1">Produto 1:</label><input type="number" id="min-quantity-produto-1" value="3" min="0" onchange="updateNotifications()"></div>
         <div class="config-item"><label for="min-quantity-produto-2">Produto 2:</label><input type="number" id="min-quantity-produto-2" value="3" min="0" onchange="updateNotifications()"></div>
-        <!-- Continue até Produto 30 -->
+        <div class="config-item"><label for="min-quantity-produto-3">Produto 3:</label><input type="number" id="min-quantity-produto-3" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-4">Produto 4:</label><input type="number" id="min-quantity-produto-4" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-5">Produto 5:</label><input type="number" id="min-quantity-produto-5" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-6">Produto 6:</label><input type="number" id="min-quantity-produto-6" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-7">Produto 7:</label><input type="number" id="min-quantity-produto-7" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-8">Produto 8:</label><input type="number" id="min-quantity-produto-8" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-9">Produto 9:</label><input type="number" id="min-quantity-produto-9" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-10">Produto 10:</label><input type="number" id="min-quantity-produto-10" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-11">Produto 11:</label><input type="number" id="min-quantity-produto-11" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-12">Produto 12:</label><input type="number" id="min-quantity-produto-12" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-13">Produto 13:</label><input type="number" id="min-quantity-produto-13" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-14">Produto 14:</label><input type="number" id="min-quantity-produto-14" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-15">Produto 15:</label><input type="number" id="min-quantity-produto-15" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-16">Produto 16:</label><input type="number" id="min-quantity-produto-16" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-17">Produto 17:</label><input type="number" id="min-quantity-produto-17" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-18">Produto 18:</label><input type="number" id="min-quantity-produto-18" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-19">Produto 19:</label><input type="number" id="min-quantity-produto-19" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-20">Produto 20:</label><input type="number" id="min-quantity-produto-20" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-21">Produto 21:</label><input type="number" id="min-quantity-produto-21" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-22">Produto 22:</label><input type="number" id="min-quantity-produto-22" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-23">Produto 23:</label><input type="number" id="min-quantity-produto-23" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-24">Produto 24:</label><input type="number" id="min-quantity-produto-24" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-25">Produto 25:</label><input type="number" id="min-quantity-produto-25" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-26">Produto 26:</label><input type="number" id="min-quantity-produto-26" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-27">Produto 27:</label><input type="number" id="min-quantity-produto-27" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-28">Produto 28:</label><input type="number" id="min-quantity-produto-28" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="config-item"><label for="min-quantity-produto-29">Produto 29:</label><input type="number" id="min-quantity-produto-29" value="3" min="0" onchange="updateNotifications()"></div>
         <div class="config-item"><label for="min-quantity-produto-30">Produto 30:</label><input type="number" id="min-quantity-produto-30" value="3" min="0" onchange="updateNotifications()"></div>
     </div>
 </div>
